markup/grammar.js
    markup: $ => seq(
      optional($.hash_bang_line),
      repeat($._markup_node),
    ),

    _markup_node: $ => choice(
      $.raw_text,
      $.expression_tag,
      $.comment_tag,
      $.statement_tag,
      // Alt-syntax constructs that span tag boundaries:
      $.if_alt_statement,
      $.for_alt_statement,
      $.for_in_alt_statement,
      $.while_alt_statement,
      $.function_alt_declaration,
    ),

    // -----------------------------------------------------------------------
    // Simple tag wrappers
    // -----------------------------------------------------------------------

    // A statement_tag wraps non-spanning code: {% stmt; stmt; %}
    statement_tag: $ => seq(
      field('open',  $._stmt_open),
      repeat($.statement),
      field('close', $._stmt_close),
    ),

    // {{ expr }} or {{- expr -}}
    expression_tag: $ => seq(
      field('open',  $._expr_open),
      optional($._expressions),
      field('close', $._expr_close),
    ),

    // {# ... #}  with optional whitespace-stripping markers
    comment_tag: $ => seq(
      field('open',    choice('{#-', '{#')),
      optional(field('content', $.comment_content)),
      field('close',   choice('-#}', '#}')),
    ),

    // comment_content is an external token (see src/scanner_impl.h): it scans
    // everything up to but not including the first #} or -#}. A regex cannot do
    // this — maximal munch would consume the '#' of the terminator (e.g. the
    // second '#' of `{# x##}`), and tree-sitter regexes have no lookahead.

    _module_export_name: $ => choice(
      $.identifier,
      $.string,
      'default',
    ),

    import_statement: $ => seq(
      'import',
      choice(
        seq(field('clause', $.import_clause), 'from', field('source', $.string)),
        field('source', $.string),
      ),
      $._semicolon,
    ),

    import_clause: $ => choice(
      field('namespace', $.namespace_import),
      field('named', $.named_imports),
      seq(
        field('default', $.identifier),
        optional(seq(
          ',',
          choice(
            field('namespace', $.namespace_import),
            field('named', $.named_imports),
          ),
        )),
      ),
    ),

    named_imports: $ => seq(
      '{',
      commaSep($.import_specifier),
      '}',
    ),

    import_specifier: $ => choice(
      field('name', $.identifier),
      seq(
        field('name', $._module_export_name),
        'as',
        field('alias', $.identifier),
      ),
    ),

    //
    // Statements
    //

    expression_statement: $ => seq(
      $._expressions,
      $._semicolon,
    ),

    // `let` declarators may omit the initializer; `const` requires one.
    // ucode rejects `const a;` ("Expecting initializer expression").
    lexical_declaration: $ => choice(
      seq(
        field('kind', 'let'),
        commaSep1($.variable_declarator),
        $._semicolon,
      ),
      seq(
        field('kind', 'const'),
        commaSep1(alias($._const_declarator, $.variable_declarator)),
        $._semicolon,
      ),
    ),

    // Initializer declaration for a C-style for-header. Differs from
    // lexical_declaration in two ucode-faithful ways:
    //   - no trailing `$._semicolon`: the for-header supplies its own literal
    //     `;`, and ucode does NOT insert a semicolon there
    //     (`for (let i = 0⏎i < 3; …)` is an error), and
    //   - `let` only: ucode rejects `const` in a for-header initializer
    //     (`for (const …)` → "Expecting expression"), just as it does for the
    //     for-in target.
    // Aliased back to lexical_declaration in the for-header so the tree node
    // name is unchanged. No `kind` field on the `let`: it is invariant here
    // (always `let`), no query reads it, and adding it roughly doubles the
    // generated parse tables (measured: STATE_COUNT 2937 → 6055).
    variable_declarator: $ => seq(
      field('name', $.identifier),
      optional($._initializer),
    ),

    _const_declarator: $ => seq(
      field('name', $.identifier),
      $._initializer,
    ),

    if_alt_statement: $ => choice(
      seq(
        'if',
        field('condition', $.parenthesized_expression),
        ':',
        field('body', repeat($.statement)),
        repeat(field('elif_clause', $.elif_clause)),
        optional(field('else_body', $.else_alt_clause)),
        'endif',
      ),
      seq(
        field('open',    $._stmt_open),
        'if',
        field('condition', $.parenthesized_expression),
        ':',
        repeat($.statement),
        field('close',   $._stmt_close),
        // Ordered clauses (see the header comment above): if-body, then elif
        // clauses, then an optional else clause. Each elif/else clause node
        // carries its own body, so the parser never has to decide whether a
        // statement_tag_open continues a body or starts the next clause at the
        // same nesting level (the old flat-sibling design mis-parsed a nested
        // if_alt inside an elif body).
        field('body', repeat($._markup_node)),
        repeat(field('elif_clause', $.elif_clause_tag)),
        optional(field('else_body', $.else_alt_clause_tag)),
        field('end_open',  $._stmt_open),
        'endif',
        repeat($.statement),
        field('end_close', $._stmt_close),
      ),
    ),

    // Inline wrappers for tag delimiter tokens.
    // Each groups all variants (plain / trim / lstrip) so grammar rules stay
    // concise while still surfacing distinct node types for highlight queries.
    _stmt_open:  $ => choice($.statement_tag_open, $.statement_tag_trim_open, $.statement_tag_lstrip_open),
    _stmt_close: $ => choice($.statement_tag_close, $.statement_tag_trim_close),
    _expr_open:  $ => choice($.expression_tag_open, $.expression_tag_trim_open),
    _expr_close: $ => choice($.expression_tag_close, $.expression_tag_trim_close),

    for_alt_statement: $ => choice(
      seq(
        forHeader($),
        ':',
        field('body', repeat($.statement)),
        'endfor',
      ),
      seq(
        field('open',    $._stmt_open),
        forHeader($),
        ':',
        repeat($.statement),
        field('close',   $._stmt_close),
        field('body',    repeat($._markup_node)),
        field('end_open',  $._stmt_open),
        'endfor',
        repeat($.statement),
        field('end_close', $._stmt_close),
      ),
    ),

    for_in_alt_statement: $ => choice(
      seq(
        'for',
        $._for_header,
        ':',
        field('body', repeat($.statement)),
        'endfor',
      ),
      seq(
        field('open',    $._stmt_open),
        'for',
        $._for_header,
        ':',
        repeat($.statement),
        field('close',   $._stmt_close),
        field('body',    repeat($._markup_node)),
        field('end_open',  $._stmt_open),
        'endfor',
        repeat($.statement),
        field('end_close', $._stmt_close),
      ),
      // Compact double-nested form: {% for (outer): for (inner): %} body {% endfor; endfor %}
      // Both iterables contribute `right` fields; both loop vars contribute `left` fields.
      seq(
        field('open',    $._stmt_open),
        'for',
        $._for_header,
        ':',
        'for',
        $._for_header,
        ':',
        field('close',   $._stmt_close),
        field('body',    repeat($._markup_node)),
        field('end_open',  $._stmt_open),
        'endfor', ';', 'endfor',
        repeat($.statement),
        field('end_close', $._stmt_close),
      ),
    ),

    // Supports both `for (k in obj)` and `for (k, v in obj)` (ucode two-variable form).
    // The loop target must be a plain identifier: ucode rejects member/subscript
    // targets (`for (a.x in o)`) and only `let` (never `const`) may declare it.
    _for_header: $ => seq(
      '(',
      choice(
        seq(
          field('kind', 'let'),
          field('left', $.identifier),
          optional(seq(',', field('value', $.identifier))),
        ),
        seq(
          field('left', $.identifier),
          optional(seq(',', field('value', $.identifier))),
        ),
      ),
      'in',
      field('right', $._expressions),
      ')',
    ),

    while_alt_statement: $ => choice(
      seq(
        'while',
        field('condition', $.parenthesized_expression),
        ':',
        field('body', repeat($.statement)),
        'endwhile',
      ),
      seq(
        field('open',    $._stmt_open),
        'while',
        field('condition', $.parenthesized_expression),
        ':',
        repeat($.statement),
        field('close',   $._stmt_close),
        field('body',    repeat($._markup_node)),
        field('end_open',  $._stmt_open),
        'endwhile',
        repeat($.statement),
        field('end_close', $._stmt_close),
      ),
    ),

    // Spanning function alt-syntax: a function whose body is markup between
    // two tags, e.g.  {% function f(a): %} raw {{ a }} {% endfunction %}
    // (the within-tag form `function f(): stmts endfunction` is handled by
    // function_declaration's body).
    parenthesized_expression: $ => seq(
      '(',
      $._expressions,
      ')',
    ),

    //
    // Expressions
    //

    _expressions: $ => choice(
      $.expression,
      $.sequence_expression,
    ),

    object: $ => prec('object', seq(
      '{',
      optional(seq(
        commaSep1(choice(
          $.pair,
          $.spread_element,
          alias(
            choice($.identifier, $._reserved_identifier),
            $.shorthand_property_identifier,
          ),
        )),
        optional(','),
      )),
      '}',
    )),

    // ucode allows a trailing comma but NOT interior elision (`[1,,2]`).
    call_expression: $ => choice(
      prec('call', seq(
        field('function', $.expression),
        field('arguments', $.arguments),
      )),
      prec('member', seq(
        field('function', $.primary_expression),
        field('optional_chain', $.optional_chain),
        field('arguments', $.arguments),
      )),
    ),

    member_expression: $ => prec('member', seq(
      field('object', choice($.expression, $.primary_expression)),
      choice('.', field('optional_chain', $.optional_chain)),
      field('property', reserved('properties', alias($.identifier, $.property_identifier))),
    )),

    subscript_expression: $ => prec.right('member', seq(
      field('object', choice($.expression, $.primary_expression)),
      optional(field('optional_chain', $.optional_chain)),
      '[', field('index', $._expressions), ']',
    )),

    // Assignment targets. ucode rejects a parenthesized whole target
    // (`(a) = 1` is "Unexpected token"), so the left-hand side is a plain
    // reference. (An optional chain anywhere in the target — `a?.b = 1` — is
    // also rejected by ucode, but that is a semantic lval check the grammar
    // does not attempt; member/subscript here still permit `?.`.)
    _lhs_expression: $ => choice(
      $.member_expression,
      $.subscript_expression,
      $._identifier,
      alias($._reserved_identifier, $.identifier),
    ),

    assignment_expression: $ => prec.right('assign', seq(
      field('left', $._lhs_expression),
      '=',
      field('right', $.expression),
    )),

    _initializer: $ => seq(
      '=',
      field('value', $.expression),
    ),

    binary_expression: $ => choice(
      ...[
        ['&&', 'logical_and'],
        ['||', 'logical_or'],
        ['>>', 'binary_shift'],
        ['<<', 'binary_shift'],
        ['&', 'bitwise_and'],
        ['^', 'bitwise_xor'],
        ['|', 'bitwise_or'],
        ['+', 'binary_plus'],
        ['-', 'binary_plus'],
        ['*', 'binary_times'],
        ['/', 'binary_times'],
        ['%', 'binary_times'],
        ['**', 'binary_exp'],  // left-associative in ucode: 4**3**2 == (4**3)**2
        ['<', 'binary_relation'],
        ['<=', 'binary_relation'],
        ['==', 'binary_equality'],
        ['===', 'binary_equality'],
        ['!=', 'binary_equality'],
        ['!==', 'binary_equality'],
        ['>=', 'binary_relation'],
        ['>', 'binary_relation'],
        ['??', 'logical_or'],    // same level as ||, freely mixable
        ['in', 'binary_relation'],
      ].map(([operator, precedence, associativity]) =>
        (associativity === 'right' ? prec.right : prec.left)(precedence, seq(
          field('left', $.expression),
          field('operator', operator),
          field('right', $.expression),
        )),
      ),
    ),

    update_expression: $ => prec.left('update', choice(
      seq(
        field('argument', $._lhs_expression),
        field('operator', choice('++', '--')),
      ),
      seq(
        field('operator', choice('++', '--')),
        field('argument', $._lhs_expression),
      ),
    )),

    string: $ => choice(
      seq(
        '"',
        repeat(choice(
          alias($._double_quote_string_content, $.string_fragment),
          $.escape_sequence,
        )),
        '"',
      ),
      seq(
        '\'',
        repeat(choice(
          alias($._single_quote_string_content, $.string_fragment),
          $.escape_sequence,
        )),
        '\'',
      ),
    ),

    // Ucode extends JS escapes with \e (ESC), \a (BEL), and octal sequences.
    // Unlike JS, ucode supports only the 4-hex `\uXXXX` form \u2014 not `\u{...}`.
    number: _ => {
      const hexDigits = /[\da-fA-F]+/;
      const hexLiteral = seq(choice('0x', '0X'), hexDigits);
      const hexFloat = seq(choice('0x', '0X'), hexDigits, '.', optional(hexDigits));

      const decimalDigits = /\d+/;
      const signedInteger = seq(optional(choice('-', '+')), decimalDigits);
      const exponentPart = seq(choice('e', 'E'), signedInteger);
      const fraction = seq('.', optional(decimalDigits));

      const binaryLiteral = seq(choice('0b', '0B'), /[0-1]+/);
      const octalLiteral = seq(choice('0o', '0O'), /[0-7]+/);

      // Legacy C octal: `0` then octal digits only, no fraction/exponent.
      const legacyOctalLiteral = seq('0', /[0-7]+/);

      const decimalLiteral = choice(
        // No leading zero: 1-9 then optional digits/fraction/exponent.
        seq(/[1-9]/, optional(decimalDigits), optional(fraction), optional(exponentPart)),
        // Leading zero followed by 8 or 9: legacy non-octal decimal.
        seq('0', /[89]/, optional(decimalDigits), optional(fraction), optional(exponentPart)),
        // A lone zero, optionally with a fraction and/or exponent.
        seq('0', optional(choice(seq(fraction, optional(exponentPart)), exponentPart))),
      );

      return token(choice(
        hexFloat,
        hexLiteral,
        decimalLiteral,
        binaryLiteral,
        octalLiteral,
        legacyOctalLiteral,
      ));
    },

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,

    arguments: $ => seq(
      '(',
      commaSep(choice($.expression, $.spread_element)),
      ')',
    ),

    // ucode object keys are a label, a string, or a computed `[expr]` — a bare
    // numeric key (`{1: 2}`) is rejected at parse time ("Expecting label",
    // compiler.c uc_compiler_compile_object) even after the 8d7d15e method-
    // shorthand change, which uses the same key check.
    _property_name: $ => reserved('properties', choice(
      alias(
        choice($.identifier, $._reserved_identifier),
        $.property_identifier,
      ),
      $.string,
      $.computed_property_name,
    )),

    pair: $ => seq(
      field('key', $._property_name),
      ':',
      field('value', $.expression),
    ),

    _reserved_identifier: _ => choice(
      'get',
      'set',
    ),
