markup/test/corpus/markup.txt
================================================================================
Raw text only
================================================================================

Hello, world!

--------------------------------------------------------------------------------

(markup
  (raw_text))

================================================================================
Braces that are not tag openers become raw text
================================================================================

{ not a tag } and {another}

--------------------------------------------------------------------------------

(markup
  (raw_text))

================================================================================
Expression tag
================================================================================

Hello, {{ name }}!

--------------------------------------------------------------------------------

(markup
  (raw_text)
  (expression_tag
    open: (expression_tag_open)
    (identifier)
    close: (expression_tag_close))
  (raw_text))

================================================================================
Expression tag with trim markers
================================================================================
{{- name -}}
--------------------------------------------------------------------------------

(markup
  (expression_tag
    open: (expression_tag_trim_open)
    (identifier)
    close: (expression_tag_trim_close)))

================================================================================
Statement tag
================================================================================
{% let x = 1; %}
--------------------------------------------------------------------------------

(markup
  (statement_tag
    open: (statement_tag_open)
    (lexical_declaration
      (variable_declarator
        name: (identifier)
        value: (number)))
    close: (statement_tag_close)))

================================================================================
Empty statement tag
================================================================================
{%%}
--------------------------------------------------------------------------------

(markup
  (statement_tag
    open: (statement_tag_open)
    close: (statement_tag_close)))

================================================================================
Empty expression tag
================================================================================
{{}}
--------------------------------------------------------------------------------

(markup
  (expression_tag
    open: (expression_tag_open)
    close: (expression_tag_close)))

================================================================================
Statement tag with left-trim marker
================================================================================

  {%- let x = 1; -%}

--------------------------------------------------------------------------------

(markup
  (raw_text)
  (statement_tag
    open: (statement_tag_trim_open)
    (lexical_declaration
      (variable_declarator
        name: (identifier)
        value: (number)))
    close: (statement_tag_trim_close))
  (raw_text))

================================================================================
Comment tag
================================================================================
{# this is a comment #}
--------------------------------------------------------------------------------

(markup
  (comment_tag
    content: (comment_content)))

================================================================================
Consecutive tags with no raw text between them
================================================================================
{% a = 1; %}{{ b }}
--------------------------------------------------------------------------------

(markup
  (statement_tag
    open: (statement_tag_open)
    (expression_statement
      (assignment_expression
        left: (identifier)
        right: (number)))
    close: (statement_tag_close))
  (expression_tag
    open: (expression_tag_open)
    (identifier)
    close: (expression_tag_close)))

================================================================================
if alt-syntax
================================================================================
{% if (x): %}body{% endif %}
--------------------------------------------------------------------------------

(markup
  (if_alt_statement
    open: (statement_tag_open)
    condition: (parenthesized_expression
      (identifier))
    close: (statement_tag_close)
    (raw_text)
    end_open: (statement_tag_open)
    end_close: (statement_tag_close)))

================================================================================
for-in alt-syntax
================================================================================
{% for (let i in items): %}{{ items[i] }}{% endfor %}
--------------------------------------------------------------------------------

(markup
  (for_in_alt_statement
    open: (statement_tag_open)
    left: (identifier)
    right: (identifier)
    close: (statement_tag_close)
    body: (expression_tag
      open: (expression_tag_open)
      (subscript_expression
        object: (identifier)
        index: (identifier))
      close: (expression_tag_close))
    end_open: (statement_tag_open)
    end_close: (statement_tag_close)))

================================================================================
while alt-syntax
================================================================================
{% while (cond): %}body{% endwhile %}
--------------------------------------------------------------------------------

(markup
  (while_alt_statement
    open: (statement_tag_open)
    condition: (parenthesized_expression
      (identifier))
    close: (statement_tag_close)
    body: (raw_text)
    end_open: (statement_tag_open)
    end_close: (statement_tag_close)))

================================================================================
counting for alt-syntax
================================================================================
{% for (i = 0; i < 3; i++): %}x{% endfor %}
--------------------------------------------------------------------------------

(markup
  (for_alt_statement
    open: (statement_tag_open)
    initializer: (assignment_expression
      left: (identifier)
      right: (number))
    condition: (binary_expression
      left: (identifier)
      right: (number))
    increment: (update_expression
      argument: (identifier))
    close: (statement_tag_close)
    body: (raw_text)
    end_open: (statement_tag_open)
    end_close: (statement_tag_close)))

================================================================================
nested if inside for-in body
================================================================================
{% for (let x in xs): %}{% if (x): %}yes{% endif %}{% endfor %}
--------------------------------------------------------------------------------

(markup
  (for_in_alt_statement
    open: (statement_tag_open)
    left: (identifier)
    right: (identifier)
    close: (statement_tag_close)
    body: (if_alt_statement
      open: (statement_tag_open)
      condition: (parenthesized_expression
        (identifier))
      close: (statement_tag_close)
      (raw_text)
      end_open: (statement_tag_open)
      end_close: (statement_tag_close))
    end_open: (statement_tag_open)
    end_close: (statement_tag_close)))

================================================================================
nested for-in inside while body
================================================================================
{% while (go): %}{% for (let x in xs): %}{{ x }}{% endfor %}{% endwhile %}
--------------------------------------------------------------------------------

(markup
  (while_alt_statement
    open: (statement_tag_open)
    condition: (parenthesized_expression
      (identifier))
    close: (statement_tag_close)
    body: (for_in_alt_statement
      open: (statement_tag_open)
      left: (identifier)
      right: (identifier)
      close: (statement_tag_close)
      body: (expression_tag
        open: (expression_tag_open)
        (identifier)
        close: (expression_tag_close))
      end_open: (statement_tag_open)
      end_close: (statement_tag_close))
    end_open: (statement_tag_open)
    end_close: (statement_tag_close)))

================================================================================
Comment tag with open-trim marker
================================================================================
{#- this is a comment #}
--------------------------------------------------------------------------------

(markup
  (comment_tag
    content: (comment_content)))

================================================================================
Comment tag with close-trim marker
================================================================================
{# this is a comment -#}
--------------------------------------------------------------------------------

(markup
  (comment_tag
    content: (comment_content)))

================================================================================
Comment tag with both trim markers
================================================================================
{#- both sides -#}
--------------------------------------------------------------------------------

(markup
  (comment_tag
    content: (comment_content)))

================================================================================
Statement tag with trim-right close marker
================================================================================
{% let x = 1; -%}
--------------------------------------------------------------------------------

(markup
  (statement_tag
    open: (statement_tag_open)
    (lexical_declaration
      (variable_declarator
        name: (identifier)
        value: (number)))
    close: (statement_tag_trim_close)))

================================================================================
Statement tag with both trim markers
================================================================================
{%- let x = 1; -%}
--------------------------------------------------------------------------------

(markup
  (statement_tag
    open: (statement_tag_trim_open)
    (lexical_declaration
      (variable_declarator
        name: (identifier)
        value: (number)))
    close: (statement_tag_trim_close)))

================================================================================
Statement tag with lstrip-suppress marker
================================================================================
{%+ let x = 1; %}
--------------------------------------------------------------------------------

(markup
  (statement_tag
    open: (statement_tag_lstrip_open)
    (lexical_declaration
      (variable_declarator
        name: (identifier)
        value: (number)))
    close: (statement_tag_close)))

================================================================================
Statement tag with lstrip-suppress and trim-right markers
================================================================================
{%+ let x = 1; -%}
--------------------------------------------------------------------------------

(markup
  (statement_tag
    open: (statement_tag_lstrip_open)
    (lexical_declaration
      (variable_declarator
        name: (identifier)
        value: (number)))
    close: (statement_tag_trim_close)))

================================================================================
Tag-first document
================================================================================
{% x = 1; %}
raw text after
--------------------------------------------------------------------------------

(markup
  (statement_tag
    open: (statement_tag_open)
    (expression_statement
      (assignment_expression
        left: (identifier)
        right: (number)))
    close: (statement_tag_close))
  (raw_text))

================================================================================
Object literal inside expression tag
================================================================================
{{ {key: "v"} }}
--------------------------------------------------------------------------------

(markup
  (expression_tag
    open: (expression_tag_open)
    (object
      (pair
        key: (property_identifier)
        value: (string
          (string_fragment))))
    close: (expression_tag_close)))

================================================================================
Cross-tag variable declaration
================================================================================
{% let x = 1; %}{{ x + 1 }}
--------------------------------------------------------------------------------

(markup
  (statement_tag
    open: (statement_tag_open)
    (lexical_declaration
      (variable_declarator
        name: (identifier)
        value: (number)))
    close: (statement_tag_close))
  (expression_tag
    open: (expression_tag_open)
    (binary_expression
      left: (identifier)
      right: (number))
    close: (expression_tag_close)))

================================================================================
Cross-tag default import
================================================================================
{% import fs from "fs"; %}{{ fs.readFile("x") }}
--------------------------------------------------------------------------------

(markup
  (statement_tag
    open: (statement_tag_open)
    (import_statement
      clause: (import_clause
        default: (identifier))
      source: (string
        (string_fragment)))
    close: (statement_tag_close))
  (expression_tag
    open: (expression_tag_open)
    (call_expression
      function: (member_expression
        object: (identifier)
        property: (property_identifier))
      arguments: (arguments
        (string
          (string_fragment))))
    close: (expression_tag_close)))

================================================================================
Cross-tag named import
================================================================================
{% import { readFile } from "fs"; %}{{ readFile("x") }}
--------------------------------------------------------------------------------

(markup
  (statement_tag
    open: (statement_tag_open)
    (import_statement
      clause: (import_clause
        named: (named_imports
          (import_specifier
            name: (identifier))))
      source: (string
        (string_fragment)))
    close: (statement_tag_close))
  (expression_tag
    open: (expression_tag_open)
    (call_expression
      function: (identifier)
      arguments: (arguments
        (string
          (string_fragment))))
    close: (expression_tag_close)))

================================================================================
For-in alt-syntax with raw text in body
================================================================================
{% for (let i in items): %}{{ items[i] }}
{% endfor %}
--------------------------------------------------------------------------------

(markup
  (for_in_alt_statement
    open: (statement_tag_open)
    left: (identifier)
    right: (identifier)
    close: (statement_tag_close)
    body: (expression_tag
      open: (expression_tag_open)
      (subscript_expression
        object: (identifier)
        index: (identifier))
      close: (expression_tag_close))
    body: (raw_text)
    end_open: (statement_tag_open)
    end_close: (statement_tag_close)))
